@@ -41,7 +41,7 @@
 	border: 1px solid gray;
 }
 
-#editor_1, #editor_2 {
+#editor_1, #editor_2, #editor_3 {
 	margin: 10px;
 	border: 10px solid gray;
 	padding: 10px;
@@ -65,6 +65,16 @@
 
 		<div id="editor_2">
 			<textarea id="elm2" name="elm2" rows="15" cols="80" style="width: 100%">
+				&lt;span class=&quot;example1&quot;&gt;Test header 1&lt;/span&gt;&lt;br /&gt;
+				&lt;span class=&quot;example2&quot;&gt;Test header 2&lt;/span&gt;&lt;br /&gt;
+				&lt;span class=&quot;example3&quot;&gt;Test header 3&lt;/span&gt;&lt;br /&gt;
+				Some &lt;b&gt;element&lt;/b&gt;, this is to be editor 1. &lt;br /&gt; This editor instance has a 100% width to it.
+				&lt;p&gt;Some paragraph. &lt;a href=&quot;http://www.sourceforge.net&quot;&gt;Some link&lt;/a&gt;&lt;/p&gt;
+			</textarea>
+		</div>
+
+		<div id="editor_3">
+			<textarea id="elm3" name="elm3" rows="15" cols="80" style="width: 700px">
 				&lt;span class=&quot;example1&quot;&gt;Test header 1&lt;/span&gt;&lt;br /&gt;
 				&lt;span class=&quot;example2&quot;&gt;Test header 2&lt;/span&gt;&lt;br /&gt;
 				&lt;span class=&quot;example3&quot;&gt;Test header 3&lt;/span&gt;&lt;br /&gt;
